# nauto

./: .gitignore  README.md  README_DEV.md  __init__.py  pyproject.toml
jobs/: __init__.py  ai_resource_review.py  generate_desired_services.py  ingest_nodeutils_inventory.py  nodeutils_ingest_batch.py  seed_home_cluster.py  service_placement_eval.py  service_placement_review.py
seed/: desired_services.yaml  home_cluster.yaml  intent_sources.yaml  nodeutils_ingest.yaml  service_repositories.yaml
tests/: test_nodeutils_ingest_batch.py  test_service_placement_eval.py
